<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.elneo.elneoscan.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/barcode"
        android:id="@+id/lbl_barcode"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tv_barcode"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="85dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/product_code"
        android:id="@+id/lbl_product_code"
        android:layout_below="@+id/tv_barcode"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tv_product_code"
        android:layout_below="@+id/tv_barcode"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="85dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/product_name"
        android:id="@+id/lbl_product_description"
        android:layout_below="@+id/tv_product_code"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tv_product_description"
        android:layout_below="@+id/tv_product_code"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="85dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/product_qty"
        android:id="@+id/lbl_product_qty"
        android:layout_below="@+id/tv_product_description"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tv_product_qty"
        android:layout_below="@+id/tv_product_description"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="85dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Not connected"
        android:id="@+id/tv_status"
        android:layout_above="@+id/fab_qty"
        android:layout_centerHorizontal="true" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_counter_white_36dp"
        app:fabSize="normal"
        app:rippleColor="#3F51B5"
        app:backgroundTint="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_checkbox_marked_circle_outline_white_36dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/fab_validate"
        app:rippleColor="#3F51B5"
        app:backgroundTint="@color/colorPrimary" />

</RelativeLayout>
